--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,6 @@
   "env": {
     "DEEPSEEK_API_KEY": "sk-1ed52979775749539bb244fa2aeefb64",
     "NODE_ENV": "production",
-    "USE_MOCK": "false"
+    "USE_MOCK": "true"
   }
 }
